change the contact email address

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,6 +7,6 @@
 
 <address>
   <strong>Email</strong><br>
-  <a href="mailto:#">wuwq85@gmail.com</a>
+  <a href="mailto:#">abc@gmail.com</a>
 </address>
 
