--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
           <li><%= link_to "Sign up",new_user_registration_path %></li>
           <li><%= link_to "Sign in",new_user_session_path %></li>
         <% else %>
-          <li><%= link_to "Sign out",destroy_user_session_path, method: :delete%></li>
+          <li><%= link_to "Sign out of #{current_user.name}",destroy_user_session_path, method: :delete%></li>
           <li><%= link_to "Edit profile",edit_user_registration_path%></li>
         <% end %>
       </ul>
