--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @listing, class: "btn btn-link" %> |
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+<% if (current_user == @listing.user) %>
+	<%= link_to 'Show', @listing, class: "btn btn-link" %> |
+	<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+<% end %>
