--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,11 +18,13 @@
         <li><%= link_to "Contact", pages_contact_path%></li>       
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if !user_signed_in? %> 
-          <li><%= link_to "Sign up",new_user_registration_path %></li>
+        <% if !user_signed_in? %>                     
+          <li><%= link_to "My listings", seller_path %></li>
           <li><%= link_to "Sign in",new_user_session_path %></li>
+          <li><%= link_to "Sign up",new_user_registration_path %></li>
         <% else %>
           <li><%= link_to "Sign out of #{current_user.name}",destroy_user_session_path, method: :delete%></li>
+          <li><%= link_to "My listings", seller_path %></li>
           <li><%= link_to "Edit profile",edit_user_registration_path%></li>
         <% end %>
       </ul>
