--- a/app/views/listings/seller.erb
+++ b/app/views/listings/seller.erb
@@ -1,24 +1,34 @@
-
-<div class="row">
+<table class="table table-striped table-bordered">
+  <tr>
+    <th class="text-center">Image</th>
+    <th class="text-center">Name</th>
+    <th class="text-center">Price</th>
+    <th class="text-center">Description</th>
+    <th class="text-center">Action</th>
+  </tr>
+  
   <% @listings.each do |listing| %>
-    <% if current_user == listing.user %>
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <%= link_to image_tag(listing.image.url), listing %>
-          <div class="caption">
-            <h3><%= listing.name %></h3>
-            <p><%= number_to_currency(listing.price) %></p>
-            <%= "sold by #{listing.user.name}" %> </br>          
-            <% if user_signed_in? && current_user ==  listing.user %>
-              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-            <% end %>
-          </div>  
-        </div>        
-      </div>
-    <% end %>  
-  <% end %>  
-</div>
+    <tr>
+      <td><%= link_to image_tag(listing.image.url(:thumb)), listing %></td>
+      <td><%= listing.name %></td>
+      <td><%= number_to_currency(listing.price) %></td>
+      <td><%= listing.description %></td>
+      <td>
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+            Action
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %></a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></a></li>
+          </ul>
+        </div>
+      </td>
+    </tr>
+  <% end %>
+</table>
+
 
 <% if user_signed_in? %>
   <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
