--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,16 +1,36 @@
-
+<h3><%= Date.today.to_s %></h3>
 <div class="row">
   <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <%= link_to image_tag(listing.image.url), listing %>
-        <div class="caption">
-          <h3><%= listing.name %></h3>
-          <p><%= number_to_currency(listing.price) %></p>
-          <%= "sold by #{listing.user.name}" %> </br>          
-        </div>  
-      </div>        
-    </div>
+    <% if listing.created_date == Date.today.to_s %>
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <%= link_to image_tag(listing.image.url), listing %>
+          <div class="caption">
+            <h3><%= listing.name %></h3>
+            <p><%= number_to_currency(listing.price) %></p>
+            <%= "sold by #{listing.user.name}" %> </br>          
+          </div>  
+        </div>        
+      </div>
+    <% end %>
+  <% end %>  
+</div>
+
+<h3><%= Date.yesterday.to_s %></h3>
+<div class="row">
+  <% @listings.each do |listing| %>
+    <% if listing.created_date == Date.yesterday.to_s %>
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <%= link_to image_tag(listing.image.url), listing %>
+          <div class="caption">
+            <h3><%= listing.name %></h3>
+            <p><%= number_to_currency(listing.price) %></p>
+            <%= "sold by #{listing.user.name}" %> </br>          
+          </div>  
+        </div>        
+      </div>
+    <% end %>
   <% end %>  
 </div>
 
