--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,9 +23,10 @@
           <li><%= link_to "Sign in",new_user_session_path %></li>
           <li><%= link_to "Sign up",new_user_registration_path %></li>
         <% else %>
-          <li><%= link_to "Sign out of #{current_user.name}",destroy_user_session_path, method: :delete%></li>
+          <li><%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %></li>
           <li><%= link_to "My listings", seller_path %></li>
           <li><%= link_to "Edit profile",edit_user_registration_path%></li>
+          <li><%= link_to "Sign out of #{current_user.name}",destroy_user_session_path, method: :delete%></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
