--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,13 +19,22 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if !user_signed_in? %>                     
-          <li><%= link_to "My listings", seller_path %></li>
           <li><%= link_to "Sign in",new_user_session_path %></li>
           <li><%= link_to "Sign up",new_user_registration_path %></li>
         <% else %>
           <li><%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %></li>
-          <li><%= link_to "My listings", seller_path %></li>
-          <li><%= link_to "Edit profile",edit_user_registration_path%></li>
+          
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "My listings", seller_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "My purchase", purchases_path %></li>
+              <li><%= link_to "My sales", sales_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Edit profile",edit_user_registration_path%></li>
+            </ul>
+          </li>
           <li><%= link_to "Sign out of #{current_user.name}",destroy_user_session_path, method: :delete%></li>
         <% end %>
       </ul>
