--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -17,7 +17,7 @@
       <td class="center"><%= order.listing.name %></td>
       <td class="center"><%= number_to_currency(order.listing.price) %></td>
       <td class="center"><%= order.seller.name %></td>
-      <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
+      <td class="center"><%= order.created_at.getlocal.strftime("%B %-d, %Y") %></td>
     </tr>
   <% end %>
 </table>
