--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -13,7 +13,7 @@
 		<p><%= "sold by #{@listing.user.name}" %></p>
 		<br>
 		<div class="center">
-			<%= link_to 'Buy it now', new_listing_order_path(@listing), class: "btn btn-primary" %>
+			<%= link_to 'Buy it now', new_listing_order_path(@listing), class: "btn btn-primary", data: {no_turbolink: true} %>
 		</div>
 	</div>	
 </div>
