add css style for brand name

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,3 +28,14 @@ body {
 		margin:0px;
 	}
 }
+
+.navbar-default{
+	backgroud-color: #EFEFEB;
+}
+
+.navbar-default .navbar-brand {
+	font-family: guardian-egyptt, georgia, serif;
+	font-weight: 400;
+	color: #d5641c;
+	font-size: 30px;
+}
